// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> should render the component with \`default size\` 1`] = `
<div
  className="Select__SelectStyled-fwaYyW dmgKhz"
  size=""
/>
`;

exports[`<Select /> should render the component with \`error validation state\` 1`] = `
<div
  className="Select__SelectStyled-fwaYyW gAHRLf"
  size=""
/>
`;

exports[`<Select /> should render the component with \`small size\` 1`] = `
<div
  className="Select__SelectStyled-fwaYyW vWlCC"
  size="small"
/>
`;

exports[`<Select /> should render the component with \`success validation state\` 1`] = `
<div
  className="Select__SelectStyled-fwaYyW hbgspR"
  size=""
/>
`;

exports[`<Select /> should render the component with \`warning validation state\` 1`] = `
<div
  className="Select__SelectStyled-fwaYyW jjUavY"
  size=""
/>
`;
